  activities to be flushed at program exit. This can avoid records to be
  dropped in OpenACC programs.
- Changed default method of CUDA kernel recording to concurrent. Therefore
  the SCOREP_CUDA_ENABLE option 'concurrent' has been replaced with
  'kernel_serial'.
- Added support for runtime filtering of CUDA device and host activities.
- Fix missing flags in OPARI2 call to disable OpenMP instrumentation, if the
  user selected POMP instrumentation for a serial program without specifying
  that the program is serial, manually.
- Prepend link calls to the intel compiler with seetings to VT_LIB_DIR and
  VT_LIBS to avoid remarks.
- Improved event size estimation in scorep-score using otf2-estimator.
- Improved initialization of adapters which results in a reduced
  number of libraries needed to be linked into the application.
- Install Cube remap specification file and provide its location via
  scorep-config tool.
- Changed enumeration of threads in the profile from a global enumeration
  to an enumeration from 0 to N-1 on each process.
- Basic support for the K Computer and Fujitsu FX10 systems added. The
  Tofu network topology will be supported in a subsequent release.
  Note that some C++ OpenMP programs fail during measurement
  initialization for unknown reasons.
- Use "-G2" if the Cray compiler instrumentation is used.
  The previous "-g" flag disabled all optimizations.
- Fix creation of experiment directory, if the monitored application make
  use of 'chdir' operation.
- The scorep instrumenter tool moved compiler selection flags for the
  MPI compiler wrapper to a different location in the command line. Fixed.
- Fix broken instrumentation if the link line explcitly links libc.

------------------- Released version 1.2.3 ---------------------------

- Fixed a failed assertion that occurs if selective recording was
  enabled in profiling mode.
- Fixed wrong path names in the instrumenter, when Score-P was
  configured with the --bindir flag.