@@ -883,8 +883,6 @@ memcpy         = CUDA memory copies
 sync           = Record implicit and explicit CUDA synchronization
 gpumemusage    = Record CUDA memory (de)allocations as a counter
 references     = Record references between CUDA activities
-stream_reuse   = Reuse destroyed/closed CUDA streams
-device_reuse   = Reuse destroyed/closed CUDA devices
 flushatexit    = Flush CUDA activity buffer at program exit
 yes/DEFAULT/1  = "runtime,kernel,memcpy"
 no             = Disable CUDA measurement
