@@ -71,6 +71,7 @@
   the SCOREP_CUDA_ENABLE option 'concurrent' has been replaced with
   'kernel_serial'.
 - Added support for runtime filtering of CUDA device and host activities.
+- Removed SCOREP_CUDA_ENABLE option 'stream_reuse'
 - Fix missing flags in OPARI2 call to disable OpenMP instrumentation, if the
   user selected POMP instrumentation for a serial program without specifying
   that the program is serial, manually.
